# io.github.arijanj.Mimic

./: io.github.arijanj.Mimic.json  meson.build
data/: io.github.arijanj.Mimic.desktop.in  io.github.arijanj.Mimic.gschema.xml  io.github.arijanj.Mimic.metainfo.xml.in  io.github.arijanj.Mimic.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: dialogs.py  main.py  meson.build  mimeapps.py  mimic.gresource.xml  mimic.in  utils.py  widgets.py
